# use_opencv

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/edge_detector/: CMakeLists.txt  edge_detector.cpp
apps/hog/: CMakeLists.txt  hog.m  main.cpp
apps/image_vs_video/: codec.cpp  readme.md
apps/kalman_filter/: CMakeLists.txt  kalman_filter.cpp
apps/ocr/: CMakeLists.txt  character_segment.cpp
apps/optical_flow/: CMakeLists.txt  optical-flow_track.cpp  pyramid_lucas_kanade.cpp
apps/sift/: CMakeLists.txt  readme.txt
apps/sift/src/: sift.cpp  sift.h
apps/sift/systest/: sift_testbed.cpp
apps/thin/: CMakeLists.txt  thin_example.cpp
cascade_train/: CMakeLists.txt  boost.cpp  boost.h  cascadeclassifier.cpp  class-diagram.uxf  features.cpp  haarfeatures.cpp  haarfeatures.h  imagestorage.cpp  imagestorage.h  train-activity-diagram.uxf  train-sequence-diagram.uxf  traincascade.cpp  traincascade.org  traincascade_features.h
image_match/: CMakeLists.txt  image-match.org
image_match/include/: MareMatchingClass.h
image_match/src/: MareMatchingClass.cpp
image_match/systest/: image_match_example.cpp
objDetect/: CMakeLists.txt  face-detector_on_webcam_based_opencv.cpp  objectDetection_image.cpp  objectDetection_list.cpp  objectDetection_webcam.cpp  test-supres.cpp
objDetect_LBP/: CMakeLists.txt  objectDetection_image_LBP.cpp  objectDetection_webcam_LBP.cpp
softcascade/: CMakeLists.txt  config.cpp  dataset.cpp  sft_config_template.xml
softcascade/include/sft/: ChannelFeatureBuilder_impl.hpp  config.hpp  softcascade_initialization.hpp
softcascade/src/: ChannelFeatureBuilder_impl.cpp  config.cpp  dataset.cpp
softcascade/systest/: sft.cpp  softcascade_example.cpp  softcascade_train.cpp  test_algorithm.cpp
tools/: CMakeLists.txt  generate_samples.cpp
tools/include/: function.h  image_process.hpp  opencv_cvcommon.h  opencv_function.hpp  random_generator.hpp  string_process.h
tools/src/: function.c  image_process.cpp  opencv_cvcommon.cpp  opencv_function.cpp  random_generator.cpp  string_process.cpp
tools/tool/: concatenate_string.cpp  generate_infoFile.cpp  opencv_performance.cpp
tools/tool_haartraining/: CMakeLists.txt  createsamples.cpp  generate_infoFile.cpp
